files/gatekeeper-templates/betting-license_check_spillemyndigheden_dk-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: betting-license_check_spillemyndigheden_dk
  annotations:
    rulehub.id: betting.license_check_spillemyndigheden_dk
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  crd:
    spec:
      names:
        kind: <Kind>
      validation:
        openAPIV3Schema:
          type: object
          properties:
            requiredLabel:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package rulehub.betting.license_check_spillemyndigheden_dk
        import future.keywords.if

        default deny = []

        # Example: deny with a message
        deny[msg] {
          input.review.kind.kind == "Deployment"
          msg := "igaming.license_check_spillemyndigheden_dk: example violation"
        }
